apps/portfolio/portfolio-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portfolio
  template:
    metadata:
      labels:
        app: portfolio
    spec:
      containers:
      - name: portfolio
        image: npckennedy/portfolio:9105a4349e0c9f097f7d7fcff37f2e297c09e7ba
        ports:
        - containerPort: 5000
